--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-highcharts": "^5.2.1",
+    "angular5-data-table": "^0.5.1",
+    "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "firebase": "^4.9.0",
+    "font-awesome": "^4.7.0",
+    "highcharts": "^6.0.4",
+    "jquery": "^3.3.1",
+    "mongoose": "^5.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -29,9 +38,12 @@
     "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/highcharts": "^5.0.16",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
+    "babel-preset-es2015": "^6.24.1",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
